--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ black==23.3.0
 cffi==1.15.1
 click==8.1.3
 cryptography==40.0.2
+dnspython==2.3.0
 ecdsa==0.18.0
+email-validator==2.0.0.post2
 Faker==17.6.0
 fastapi==0.94.1
 greenlet==2.0.2
