--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -16,7 +17,9 @@
     "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.6",
+    "html-to-image": "^1.11.11",
     "next": "13.4.6",
+    "nft.storage": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
