--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "web3": "^4.0.2"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.0"
