--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
+    "@metamask/sdk": "^0.5.6",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
